feat: 生成 sessionKey
